--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_GTM =
-NEXT_PUBLIC_APP_URL = 
+NEXT_PUBLIC_APP_URL = https://abdullah034.netlify.app
 TELEGRAM_BOT_TOKEN = 
 TELEGRAM_CHAT_ID = 
 GMAIL_PASSKEY = 
